AWS-eks/k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: travel-webapp
  labels:
    name: travel-webapp
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
