AWS-eks/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: travel-webapp-service
  namespace: travel-webapp
  labels:
    app: travel-webapp
spec:
  selector:
    app: travel-webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
